# frederik-ai-2023

./: .scalafmt.conf  NOTES-B.md  NOTES.md  frederik-ai-2023.code-workspace
idris-backend/: .gitignore  test.ipkg
idris-backend/src/: Main.idr
python-tensorflow-backend/: docker-compose.yml
python-tensorflow-backend/notebooks/: il-piccolo-principe.txt  image-autoencoder.ipynb  my-transformer.ipynb  self-growing-feed-forward.ipynb  simple-autoencoder.ipynb  simple-convolutional-autoencoder.ipynb  simple-differentiation.ipynb  simple-sequence-prediction.ipynb  simple_autoencoder.ipynb  text-prediction-1.ipynb  text-prediction-2.ipynb  text-prediction-3.ipynb  text-prediction-4.ipynb  train_strategies.py  x-y-plot.ipynb
python-tensorflow-backend/notebooks/finding-math-functions/: finding-math-functions-with-multiplicative-layer.ipynb  finding-math-functions.ipynb
python-tensorflow-backend/notebooks/geometric-shapes/: decode-circles-2.ipynb  decode-circles-3.ipynb  decode-circles.ipynb  reconstruct-geometric-shapes.ipynb
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
rust-backend/src/experiment8/: boolean_algebra.rs  character_window.rs  utils.rs
rust-backend/src/experiments/: mod.rs
rust-backend/src/experiments/experiment8/: mod.rs  rc_repository.rs
rust-backend/src/experiments/experiment9/: boolean_algebra.rs  character_sequence_prediction_model.rs  mod.rs  sequence_prediction_model.rs
scala-backend/ai-2023/: .scalafmt.conf  build.sbt
scala-backend/ai-2023/src/main/scala/: Main.scala  experiment1.worksheet.sc  experiment2.worksheet.sc  (+4 more)
