[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
indicatif = "0.17.3"
csv = "1.1"
async-graphql = "4.0"
async-graphql-tide = "4.0"
tide = "0.16"
async-std = "1.9.0"
regex = "1"

[profile.release]
debug = true